fix main h2 overlay on mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -139,6 +139,11 @@ body {
 }
 
 @media (max-width: 512px) {
+  .header {
+    &__title {
+      padding-right: 0;
+    }
+  }
 
   .section {
     margin: $app-margin * 2 $app-margin;
